[package]
name = "quick-json-viewer"
version = "1.0.9"
edition = "2021"
description = "A fast, native JSON viewer for macOS"
authors = ["Evyatar Shalom"]
repository = "https://github.com/evyatar/quick-json-viewer"

[dependencies]
eframe        = { version = "0.34", default-features = false, features = ["default_fonts", "wgpu", "persistence"] }
egui          = "0.34"
memchr        = "2"
memmap2       = "0.9"
regex         = "1"
rfd           = "0.17"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
ureq          = { version = "2", features = ["tls"] }
unicode-bidi  = "0.3"
image         = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2             = "0.6.4"
objc2-app-kit     = { version = "0.3.2", default-features = false, features = ["std", "NSApplication", "NSEvent", "NSMenu", "NSMenuItem"] }
objc2-foundation  = { version = "0.3.2", default-features = false, features = ["std", "NSString"] }

[profile.release]
opt-level     = 3
codegen-units = 1
lto           = true
strip         = true
